# dgenerate

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  README_TOKEN_SETUP.md  env.example  package-lock.json  package.json  token-metadata.json  tsconfig.json
frontend/: .env.local.example  ARCHITECTURE.md  BACKEND_README.md  GETTING_STARTED.md  HOW_TO_GET_KEYS.md  IMAGE_GENERATION_GUIDE.md  QUICK_START_IMAGE_GEN.md  README.md  SETUP.md  SUPABASE_SETUP.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/challenges/: route.ts
frontend/app/api/create-challenge-advanced/: route.ts
frontend/components/: GameStats.tsx  Header.tsx  ImageChallenge.tsx  LoadingSpinner.tsx  ReelCard.tsx  RewardAnimation.tsx  SoraBalance.tsx  SoraBalanceCompatible.tsx  SoraLeaderboard.tsx  TokenBalance.tsx  VideoChallenge.tsx  WalletProvider.tsx
frontend/hooks/: useSupabase.ts
frontend/lib/: anchor.ts  embeddings.ts  supabase.ts  types.ts  utils.ts
frontend/scripts/: README.md  download-images.js  generate-images.js  generated-images.json
frontend/supabase/: schema.sql
frontend/types/: supabase.ts
programs/dgenerate/: Cargo.toml
programs/dgenerate/src/: constants.rs  error.rs  lib.rs  state.rs
programs/sora_guesser/: Cargo.toml
programs/sora_guesser/src/: lib.rs
scripts/: create-token-account.ts  create-token-mint.ts  create-token-with-metadata.ts  helpers.ts  mint-tokens.ts  token-config.ts  transfer-tokens.ts
tests/: dgenerate.ts  sora-guesser.ts
(+20 files in other folders)
