[package]
name = "sora_guesser"
version = "0.1.0"
description = "Sora video guessing game with token rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sora_guesser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.28.0"
